# interactive_computer_graphics_fau_exercises

./: .gitignore
a01/: a01.cpp  a01.hpp  compile_commands.json
a01/shader/: gbuffer.fs.glsl  gbuffer.vs.glsl  quad.fs.glsl  quad.vs.glsl  splat.fs.glsl  splat.vs.glsl  stencil.fs.glsl  stencil.vs.glsl  stencilDebug.fs.glsl  stencilDebug.vs.glsl
a02/: a02.cpp  a02.hpp  compile_commands.json
a02/cmake/: FindExternal.cmake
a02/shader/: base.fs.glsl  blend.fs.glsl  copy.fs.glsl  peel.fs.glsl  peel.vs.glsl  phong.fs.glsl  phong.vs.glsl  quad.vs.glsl
a03/: .clang-format  a03.cpp  a03.hpp  compile_commands.json  notes
a03/shader/: phong.fs.glsl  phong.vs.glsl  quad.fs.glsl  taa.cs.glsl
a04/: a04.cpp  a04.hpp  compile_commands.json
a04/shader/: map.fs.glsl  map.vs.glsl  shaderA.fs.glsl  shaderA.vs.glsl  shaderB.fs.glsl  shaderC.fs.glsl  shaderC.vs.glsl  spherical_coordinates.inc.glsl
a05/: a05.cpp  a05.hpp  compile_commands.json
a05/shader/: phong.fs.glsl  phong.vs.glsl  shadow.vs.glsl
a06/: CMakeLists.txt  a06.cpp  a06.hpp  compile_commands.json
a06/shader/: fragment.glsl  tes_control.glsl  tes_eval.glsl  vertex.glsl
